--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.0",
 
-        "symfony/framework-bundle": "^2.8"
+        "symfony/framework-bundle": "^3.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.0",
-        "symfony/yaml": "~2.1"
+        "phpspec/phpspec": "^3.1",
+        "symfony/yaml": "^3.2"
     },
     "config": {
         "bin-dir": "bin"
